# cpplay

./: LICENSE  README.md
FileIO/: CMakeLists.txt  File.txt  FileIO.cpp  README.md
Palindrome/: CMakeLists.txt  README.md  main.cpp
StripWhitespace/: README.md  StripWhitespace.cpp
TaskBasedThreading/: README.md  contributors.txt  mutableobject.hpp
file_io/: CMakeLists.txt  README.md  file.txt  file_io.cpp  product.cpp  product.hpp
palindromes/: CMakeLists.txt  main.cpp
remove_whitespace/: CMakeLists.txt  strip_whitespace.cpp
task_based_threading/: CMakeLists.txt  README.md  main.cpp  manager.cpp  manager.hpp  manager_data.cpp  manager_data.hpp  mutable.cpp  mutable.hpp  mutable_data.cpp  mutable_data.hpp  mutableobject.cpp  utility.cpp  utility.hpp
